--- a/style.css
+++ b/style.css
@@ -25,11 +25,11 @@ body {
   color: white;
 }
 
-#banner {
+.banner {
   width: 698px;
   height: 200px;
   display: block;
-  margin: auto;
+  margin: 30px auto;
   opacity: 0.8;
   border-style: inset;
 }
@@ -43,7 +43,7 @@ body {
 .welcome {
   font-size: 24px;
   display: block;
-  margin: auto;
+  margin: 10px auto;
   text-align: center;
   color: black;
 }
@@ -55,6 +55,31 @@ body {
   border-style: inset;
   max-height: 200px;
 }
+
+.products {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  max-width: 100%;
+  flex-wrap: wrap;
+  margin: 20px 50px;;
+  background-color: white;
+  opacity: 0.8;
+  border-style: inset;
+}
+
+.product {
+  display: inline-block;
+  padding: 10px;
+  height: 250px;
+}
+
+.product h4 {
+  display: flex;
+  justify-content: center;
+}
+
+
 
 //*
 <style type="text/css">
