--- a/style.css
+++ b/style.css
@@ -72,11 +72,20 @@ body {
   display: inline-block;
   padding: 10px;
   height: 250px;
+  transition: opacity 2s;
 }
 
 .product h4 {
   display: flex;
   justify-content: center;
+}
+
+.hidden {
+  opacity: 0;
+}
+
+.shown {
+  opacity: 1;
 }
 
 
