--- a/style.css
+++ b/style.css
@@ -63,9 +63,6 @@ body {
   max-width: 100%;
   flex-wrap: wrap;
   margin: 20px 50px;;
-  background-color: white;
-  opacity: 0.8;
-  border-style: inset;
 }
 
 .product {
@@ -73,11 +70,22 @@ body {
   padding: 10px;
   height: 250px;
   transition: opacity 2s;
+  background-color: white;
+  opacity: 0.8;
+  border-style: inset;
+  margin: 10px;
+  width: 240px;
 }
 
 .product h4 {
   display: flex;
   justify-content: center;
+}
+
+.product img {
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
 }
 
 .hidden {
