--- a/style.css
+++ b/style.css
@@ -56,6 +56,7 @@ body {
   max-height: 200px;
 }
 
+
 .products {
   display: flex;
   justify-content: center;
@@ -68,24 +69,35 @@ body {
 .product {
   display: inline-block;
   padding: 10px;
-  height: 250px;
+  height: auto;
   background-color: white;
   opacity: 0.8;
   border-style: inset;
   margin: 10px;
-  width: 240px;
+  width: 270px;
 }
+
 
 .product h4 {
   display: flex;
   justify-content: center;
 }
 
+
 .product img {
   display: block;
   margin-left: auto;
   margin-right: auto;
 }
+
+.figures {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+}
+
+
+
 
 .hidden {
   opacity: 0;
@@ -97,10 +109,6 @@ body {
 
 .fade {
   transition: opacity 2s;
-}
-
-.figure {
-  class: hidden;
 }
 
 
