--- a/style.css
+++ b/style.css
@@ -103,6 +103,66 @@ body {
   justify-content: center;
 }
 
+.carouselbox {
+  font-family: Helvetica, sans-serif;
+  font-size: 14px;
+  width: 100px;
+  position: relative;
+  margin-top: 80px;
+  border: 1px solid #ccc;
+  box-shadow: 2px 3px 10px #ccc;
+  overflow: hidden;
+}
+
+.content {
+  margin: 0;
+  padding: 0;
+}
+
+.content li {
+  font-size: 100px;
+  margin: 0;
+  padding: 0;
+  width: 100%;
+  list-style: none;
+  text-align: center;
+}
+
+.active {
+  height: 130px;
+  color: blue;
+}
+
+.active li {
+  position: absolute;
+  top: 200px;
+}
+
+.active li.current {
+  top: 30px;
+}
+
+.active .buttons {
+  padding: 5px 0;
+  background: #eee;
+  text-align: center;
+  z-index: 10;
+  position: relative;
+}
+
+.carouselbox .button {
+  border: none;
+  display: none;
+}
+
+.active .button {
+  display: block;
+}
+
+.offscreen {
+  position: absolute;
+  left: -2000px;
+}
 
 
 
