--- a/style.css
+++ b/style.css
@@ -105,6 +105,7 @@ body {
 .carouselContainer {
   width: 100%;
   background-color: silver;
+  border-radius: 45px;
 }
 
 .carouselbox {
@@ -118,7 +119,7 @@ body {
   overflow: hidden;
   margin-left: auto;
   margin-right: auto;
-  background-color: white;
+  background-color: silver;
   opacity: 0.8;
 }
 
