--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 body {
   background-color: #FFB6C1;
+  font-family: Helvetica, sans-serif;
 }
 
 .topnav {
@@ -194,6 +195,54 @@ body {
 
 .fade {
   transition: opacity 2s;
+}
+
+/*contact Form */
+
+.well-sm {
+  padding: 9px;
+  border-radius: 3px;
+}
+
+.well {
+  min-height: 20px;
+  padding: 19px;
+  margin-bottom: 20px;
+  background-color: #f5f5f5;
+  border: 1px solid #e3e3e3;
+  border-radius: 4px;
+  box-shadow:  0px 1px rgba(0, 0, 0, .05);
+}
+
+.text-center {
+  text-align: center;
+}
+
+legend {
+  display: block;
+  padding-inline-start: 2px;
+  padding-inline-end: 2px;
+  width: 100%;
+  padding: 0;
+  margin-bottom: 20px;
+  font-size: 21px;
+  line-height: inherit;
+  color: #333;
+  border: 0;
+  border-bottom: 1px solid #e5e5e5;
+}
+
+.form-horizontal .form-group {
+  margin-left: -15px;
+  margin-right: -15px;
+}
+
+.form-group {
+  margin-bottom: 15px;
+}
+
+* {
+  box-sizing: border-box;
 }
 
 
