--- a/style.css
+++ b/style.css
@@ -199,6 +199,26 @@ body {
 
 /*contact Form */
 
+fieldset {
+  background-color: #fff;
+}
+
+.text-center {
+  text-align: center;
+}
+
+legend {
+  display: block;
+  font-size: 21px;
+  width: 100%;
+  margin-bottom: 20px;
+  color: #333;
+  border-bottom: 1px solid #e5e5e5;
+  padding-inline-start: 2px;
+  padding-inline-end: 2px;
+  line-height: inherit;
+}
+
 .well-sm {
   padding: 9px;
   border-radius: 3px;
@@ -210,26 +230,10 @@ body {
   margin-bottom: 20px;
   background-color: #f5f5f5;
   border: 1px solid #e3e3e3;
-  border-radius: 4px;
-  box-shadow:  0px 1px rgba(0, 0, 0, .05);
 }
 
-.text-center {
-  text-align: center;
-}
-
-legend {
-  display: block;
-  padding-inline-start: 2px;
-  padding-inline-end: 2px;
-  width: 100%;
-  padding: 0;
-  margin-bottom: 20px;
-  font-size: 21px;
-  line-height: inherit;
-  color: #333;
-  border: 0;
-  border-bottom: 1px solid #e5e5e5;
+* {
+  box-sizing: border-box;
 }
 
 .form-horizontal .form-group {
@@ -241,10 +245,63 @@ legend {
   margin-bottom: 15px;
 }
 
-* {
-  box-sizing: border-box;
+.form-control {
+  display: block;
+  width: 100%;
+  height: 34px;
+  padding: 6px 12px;
+  font-size: 14px;
+  line-height: 1.428571429;
+  color: #555;
+  background-color: #fff;
+  background-image: none;
+  border: 1px solid #ccc;
+  border-radius: 4px;
+  -webkit-appearance: textarea;
+  background-color: white;
+  -webkit-rtl-ordering: logical;
+  flex-direction: column;
+  resize: auto;
+  cursor: text;
+  white-space: pre-wrap;
+  overflow-wrap: break-word;
+  border-width: 1px;
+  border-style: solid;
+  border-color: initial;
+  border-image: initial;
+  padding: 2px;
 }
 
+textarea .formcontrol {
+  height: auto;
+}
+
+input {
+  font-family: inherit;
+  font-size: inherit;
+  line-height: normal;
+  padding: 1px 0px;
+  -webkit-appearance: textarea;
+}
+
+input, textarea, select, button {
+  text-rendering: auto;
+  color: initial;
+  letter-spacing: normal;
+  word-spacing: normal;
+  text-transform: none;
+  text-indent: 0px;
+  text-shadow: none;
+  display: inline-block;
+  text-align: start;
+  margin: 0em;
+  font: 400 13.3333px Arial;
+}
+
+form {
+  margin-top: 0em;
+  display: block;
+}
 
 
 //*
