--- a/style.css
+++ b/style.css
@@ -152,6 +152,56 @@ body {
 
 /*contact Form */
 
+.contactFormOverallContainer {
+  width: 600px;
+}
+
+.contactLegendContainer {
+  padding: 10px;
+  background-color: white;
+  opacity: 0.6;
+  margin: auto auto 10px auto;
+}
+
+.contactLegend {
+  width: 100px;
+  margin: auto;
+  font-size: 20px;
+}
+
+.contactInputBox1 {
+  margin-left: 60px;
+  padding: 5px;
+  margin-bottom: 10px;
+  width: 493px;
+}
+
+.contactInputBox2 {
+  margin-left: 26px;
+  padding: 5px;
+  margin-bottom: 10px;
+  width: 493px;
+}
+
+.contactInputBox3 {
+  padding: 5px;
+  margin-bottom: 10px;
+  width: 493px;
+}
+
+.fiddlyText {
+  position:relative;
+  bottom: 80px;
+}
+
+.contactSubmitButton {
+  width: 65px;
+  height: 28px;
+  text-align: center;
+  font-size: 16px;
+  border-radius: 6px;
+}
+
 
 //*
 <style type="text/css">
