--- a/style.css
+++ b/style.css
@@ -180,20 +180,20 @@ body {
   margin-left: 60px;
   padding: 5px;
   margin-bottom: 10px;
-  width: 493px;
+  width: 82%;
 }
 
 .contactInputBox2 {
   margin-left: 26px;
   padding: 5px;
   margin-bottom: 10px;
-  width: 493px;
+  width: 82%;
 }
 
 .contactInputBox3 {
   padding: 5px;
   margin-bottom: 10px;
-  width: 493px;
+  width: 82%;
   height: 200px;
 }
 
