--- a/style.css
+++ b/style.css
@@ -134,10 +134,6 @@ body {
   margin: 0 auto;
 }
 
-
-
-
-
 .hidden {
   opacity: 0;
 }
@@ -215,7 +211,7 @@ body {
 .eventContainer {
   width: 600px;
   border-width: 2px;
-  border-color: threedface;
+  border-color: "threedface";
   border-style: groove;
   padding: 8px;
   margin-left: 50px;
@@ -274,6 +270,18 @@ body {
   vertical-align: top;
   position: relative;
   bottom: 5px;
+}
+
+/* Admin Page */
+.adminFormOverallContainer {
+  width: 100%;
+  margin: auto;
+}
+
+.adminLegend {
+  margin: auto;
+  font-size: 20px;
+  width: 100%;
 }
 
 //*
