--- a/style.css
+++ b/style.css
@@ -135,7 +135,7 @@ body {
 }
 
 .hidden {
-  opacity: 0;
+  display: none;
 }
 
 .shown {
@@ -164,12 +164,14 @@ body {
   background-color: white;
   opacity: 0.6;
   margin: auto auto 10px auto;
+  text-align: center;
 }
 
 .contactLegend {
   width: 100px;
   margin: auto;
   font-size: 20px;
+
 }
 
 .contactInputBox1 {
@@ -283,6 +285,27 @@ body {
   font-size: 20px;
   width: 100%;
 }
+
+label {
+  margin: 10px 10px auto auto;
+  display: inline-block;
+}
+
+input, select {
+  display: inline-block;
+}
+
+input {
+  width: 300px;
+}
+
+.platinumPricing label, .platinumPricing input {
+  display: block;
+  margin-left: 100px;
+}
+
+
+
 
 //*
 <style type="text/css">
