Switched background image back to css file as figured out what the issue was originally

--- a/style.css
+++ b/style.css
@@ -1,4 +1,5 @@
 body {
+  background-image: url("/Thumbs/yarn.jpg");
   background-color: #cccccc;
   background-repeat: no-repeat;
   background-position: center;
