admin form work - php stylee

--- a/style.css
+++ b/style.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("Thumbs/Starfield.jpg");
+  /*background-image: url("Thumbs/Starfield.jpg");*/
   background-color: #cccccc;
   background-position: center;
   background-size: cover;
